--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@angular/compiler-cli": "^7.0.0",
+    "@angular/cli": "~7.0.2",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "ng2-nvd3": "^2.0.0",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "jquery": "^3.3.1",
+    "express": "^4.16.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
@@ -45,5 +50,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1"
-  }
+  },
+  "engines": {
+    "node": "8.11.4",
+    "npm": "5.8.0"
+}
 }
