added file upload and chart creation

--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "./node_modules/nvd3/build/nv.d3.css"
+              "./node_modules/nvd3/build/nv.d3.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css" 
             ],
             "scripts": []
           },
