--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1",
-    "enhanced-resolve": "^3.3.0"
+    "enhanced-resolve": "^3.3.0",
+    "bootstrap": "^3.3.7"
   },
   "engines": {
     "node": "8.11.4",
